# unifi-client

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
examples/api_validator/: Cargo.toml  README.md  guest.rs  guests.rs  main.rs  site.rs  sites.rs  utils.rs  voucher.rs
examples/guest_management/: Cargo.toml  README.md  main.rs
examples/hotspot/backend/: .env.example  Cargo.toml  README.md  flake.nix
examples/hotspot/backend/src/: main.rs  main_old.rs
examples/hotspot/frontend/: flake.nix  package.json  pnpm-lock.yaml  react-router.config.ts
examples/hotspot/frontend/app/: root.tsx  routes.ts
examples/hotspot/frontend/app/components/: duration-selection.tsx  status-message.tsx
examples/hotspot/frontend/app/pages/: portal.tsx  success.tsx
examples/voucher_management/: README.md  main.rs
src/: api.rs  client.rs  error.rs  lib.rs  models.rs
src/api/: guest.rs  guests.rs  mod.rs  site.rs  voucher.rs
src/models/: api_response.rs  auth.rs  guest.rs  guests.rs  mod.rs  site.rs  voucher.rs
tests/: auth_tests.rs  builder_tests.rs  common.rs  concurrent_client_tests.rs  guest_tests.rs  guests_tests.rs  request_tests.rs  voucher_tests.rs
tests/common/: mod.rs
