[package]
name = "unifi-client"
version = "0.1.0"
edition = "2021"
authors = ["Frank Hinek <frankhinek@users.noreply.github.com>"]
description = "Rust client library for UniFi Controller API"
repository = "https://github.com/fedibtc/unifi-client"
license = "MIT"
keywords = ["unifi", "ubiquiti", "api", "client"]
categories = ["api-bindings", "network-programming"]

[dependencies]
async-trait = "0.1"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
pretty_assertions = "1.4"
tokio-test = "0.4"
wiremock = "0.6"