[package]
name = "unifi-client"
version = "0.3.1"
edition = "2021"
authors = ["Frank Hinek <frankhinek@users.noreply.github.com>"]
description = "Rust client library for UniFi Controller API"
repository = "https://github.com/fedibtc/unifi-client"
license = "MIT"
keywords = ["unifi", "ubiquiti", "api", "client"]
categories = ["api-bindings", "network-programming"]

[dependencies]
arc-swap = "1.7"
async-trait = "0.1"
log = "0.4"
once_cell = "1.21"
reqwest = { version = "0.12", features = ["json", "cookies"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
url = "2.5"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
pretty_assertions = "1.4"
rand = "0.9"
tokio-test = "0.4"
wiremock = "0.6"
