[package]
name = "api_validator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_validator"
path = "main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.9.2"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
unifi-client = { path = "../../" }
