[package]
name = "unifi-cafe-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
unifi-client = { path = "../../../" }
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
config = "0.15"
dotenv = "0.15" 
once_cell = "1.21"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }
validator_derive = "0.20"