[package]
name = "unifi-cafe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
config = "0.15"
dotenv = "0.15" 
once_cell = "1.21"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unifi-client = { path = "../../.." }
validator = { version = "0.20", features = ["derive"] }
validator_derive = "0.20"